# dnscatz

./: .pre-commit-config.yaml  LICENSE  README.md  catz2nsd.example.conf  catz2nsd.example.json  catz2nsd.py  pyproject.toml  zones2catz.py
.github/workflows/: codeql-analysis.yml  test.yml
dnscatz/: __init__.py  catz.py  catz2nsd.py  utils.py  zones2catz.py
regress/: .gitignore  Makefile  bad1.conf  catz2nsd.conf  zones.txt
tests/: test_catz2nsd_config.py  test_utils.py  test_zones2catz.py
tests/data/: bad1.zone  bad2.conf  good.conf  good.zone  invalid_version.zone
